--- a/src/app/map-analyst/map-analyst.page.html
+++ b/src/app/map-analyst/map-analyst.page.html
@@ -15,10 +15,10 @@
 <ion-header>
   <ion-toolbar>
     <!-- <ion-title>Peta Analisis</ion-title> -->
-    <ion-card-content>
+    <!-- <ion-card-content>
       <p>Koordinat Y: {{ currentLatitude }}</p>
       <p>Koordinat X: {{ currentLongitude }}</p>
-    </ion-card-content>
+    </ion-card-content> -->
 
     <ion-buttons slot="end">
       <ion-button href="http://localhost:8100/dashboard">Dashboard</ion-button>
@@ -83,11 +83,11 @@
     <ion-card-header>
       <ion-card-title>Lokasi anda sekarang</ion-card-title>
     </ion-card-header>
-    <ion-card-content>
+    <!-- <ion-card-content>
       <p>Koordinat Lokasi Saat Ini:</p>
       <p>Latitude: {{ currentLatitude }}</p>
       <p>Longitude: {{ currentLongitude }}</p>
-    </ion-card-content>
+    </ion-card-content> -->
  </ion-card>
   <iframe src="https://alert-result-406020.projects.earthengine.app/view/c-maps" width="100%" height="100%" frameborder="0"></iframe>
 
